fixed tablet not showing sidebar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -349,7 +349,7 @@ figure {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .sidebar {
     transform: translateX(-16rem);
   }
